// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MaintenanceTakeover renders the correct message text when only end time is provided 1`] = `
<div>
  <div
    class="tablet:padding-y-10 text-center"
  >
    <h1
      class="js-title margin-top-0 margin-bottom-2 font-heading-lg line-height-sans-2"
      tabindex="-1"
    >
      We’re undergoing maintenance
    </h1>
    <p
      class="usa-intro margin-x-auto measure-2"
    >
      We're performing some maintenance on our system, so you can't log in or work on any applications right now. The system will be back online and available on 
      <strong>
        June 17, 2021, 10:00 AM EDT
      </strong>
      .
    </p>
  </div>
</div>
`;

exports[`MaintenanceTakeover renders the correct message text when start/end times are both provided 1`] = `
<div>
  <div
    class="tablet:padding-y-10 text-center"
  >
    <h1
      class="js-title margin-top-0 margin-bottom-2 font-heading-lg line-height-sans-2"
      tabindex="-1"
    >
      We’re undergoing maintenance
    </h1>
    <p
      class="usa-intro margin-x-auto measure-2"
    >
      We're performing some maintenance on our system, so you can't log in or work on any applications right now. The system will be offline from 
      <strong>
        June 15, 2021, 3:00 PM EDT
      </strong>
       to 
      <strong>
        June 17, 2021, 10:00 AM EDT
      </strong>
      .
    </p>
  </div>
</div>
`;

exports[`MaintenanceTakeover renders the correct message text when start/end times are not provided 1`] = `
<div>
  <div
    class="tablet:padding-y-10 text-center"
  >
    <h1
      class="js-title margin-top-0 margin-bottom-2 font-heading-lg line-height-sans-2"
      tabindex="-1"
    >
      We’re undergoing maintenance
    </h1>
    <p
      class="usa-intro margin-x-auto measure-2"
    >
      We’re performing some maintenance on our system. Please check back in a few hours, or call the Contact Center at (833) 344‑7365 between 8 a.m.-5 p.m. ET.
    </p>
  </div>
</div>
`;
